<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/c_ffffff">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/c_f33b2d">
        <LinearLayout
            android:id="@+id/rl_login_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="16dp"
                android:textColor="@color/c_ffffff"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textSize="15dp"
                android:textColor="@color/c_ffffff"
                android:text="님"
                />
            <FrameLayout
                android:id="@+id/fl_close"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/btn_close"/>
            </FrameLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slidingmenu_height"
            android:paddingLeft="@dimen/slidingmenu_item_left_padding"
            android:orientation="horizontal"
            android:background="@color/c_ffffff"
            android:gravity="center_vertical"
    >
        <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/ic_home"
                android:layout_marginRight="10dp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_menu_home"
                android:textSize="15dp"
                android:textColor="@color/c_636567"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_order"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_order"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_favorite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_favorite"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_favorite"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_add"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_add"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_graph"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_graph"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_graph"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_history"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_history"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_board"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_board"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_board"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_noti"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_noti"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_noti"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_report"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_pna"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_report"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="@dimen/slidingmenu_item_left_padding"
        android:orientation="horizontal"
        android:background="@color/c_ffffff"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="@drawable/main_ic_setting"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_menu_setting"
            android:textSize="15dp"
            android:textColor="@color/c_636567"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/slidingmenu_height"
        android:paddingLeft="30dp"
        android:textSize="13dp"
        android:textColor="@color/c_999999"
        android:text="@string/s_menu_logout"/>


</LinearLayout>